@@ -55,6 +55,9 @@ class VCSliderProperties;
 #define KXMLQLCVCSliderChannel "Channel"
 #define KXMLQLCVCSliderChannelFixture "Fixture"
 
+#define KXMLQLCVCSliderInputUniverse "Universe"
+#define KXMLQLCVCSliderInputChannel "Channel"
+
 class VCSlider : public VCWidget
 {
 	Q_OBJECT
@@ -401,17 +404,23 @@ protected:
 	QTime* m_time;
 
 	/*********************************************************************
-	 * Feedback
+	 * External input
 	 *********************************************************************/
 public:
-	void setFeedbackChannel(int channel);
-	int feedbackChannel();
+	void setInputUniverse(t_input_universe uni);
+	t_input_universe inputUniverse() const { return m_inputUniverse; }
+
+	void setInputChannel(t_input_channel ch);
+	t_input_channel inputChannel() const { return m_inputChannel; }
+
+protected slots:
+	void slotInputValueChanged(t_input_universe universe,
+				   t_input_channel channel,
+				   t_input_value value);
 
 protected:
-	void sendFeedback(int value);
-
-protected:
-	int m_feedbackChannel;
+	t_input_universe m_inputUniverse;
+	t_input_channel m_inputChannel;
 
 	/*********************************************************************
 	 * Load & Save
