@@ -36,6 +36,7 @@
 
 #include "vcsliderproperties.h"
 #include "vcslider.h"
+#include "inputmap.h"
 #include "fixture.h"
 #include "app.h"
 #include "doc.h"
@@ -121,6 +122,26 @@ VCSliderProperties::VCSliderProperties(QWidget* parent, VCSlider* slider)
 		m_valuePercentageRadio->setChecked(true);
 		break;
 	}
+
+	/* External input. TODO: finish input templates and put real channel
+	   names and amounts instead of dumb Channel xx */
+	m_inputUniverseCombo->addItem(KInputNone);
+	m_inputUniverseCombo->addItems(_app->inputMap()->universeNames());
+	m_inputChannelCombo->addItem(KInputNone);
+	for (t_input_channel i = 0; i < 32; i++)
+		m_inputChannelCombo->addItem(QString("Channel %1").arg(i + 1));
+
+	/* Since "None" is the first item in the combos, use + 1 */
+	if (m_slider->inputUniverse() == KInputUniverseInvalid)
+		m_inputUniverseCombo->setCurrentIndex(0);
+	else
+		m_inputUniverseCombo->setCurrentIndex(m_slider->inputUniverse() + 1);
+
+	/* Since "None" is the first item in the combos, use + 1 */
+	if (m_slider->inputChannel() == KInputChannelInvalid)
+		m_inputChannelCombo->setCurrentIndex(0);
+	else
+		m_inputChannelCombo->setCurrentIndex(m_slider->inputChannel() + 1);
 
 	/*********************************************************************
 	 * Bus page
@@ -628,6 +649,19 @@ void VCSliderProperties::accept()
 		m_slider->setValueDisplayStyle(VCSlider::ExactValue);
 	else
 		m_slider->setValueDisplayStyle(VCSlider::PercentageValue);
+
+	/* External input universe */
+	if (m_inputUniverseCombo->currentIndex() == 0)
+		m_slider->setInputUniverse(KInputUniverseInvalid);
+	else
+		m_slider->setInputUniverse(m_inputUniverseCombo->currentIndex() - 1);
+
+	/* External input channel */
+	if (m_inputChannelCombo->currentIndex() == 0)
+		m_slider->setInputChannel(KInputChannelInvalid);
+	else
+		m_slider->setInputChannel(m_inputChannelCombo->currentIndex() - 1);
+
 
 	/* Close dialog */
 	QDialog::accept();
