@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>460</width>
-    <height>537</height>
+    <height>427</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -22,6 +22,14 @@
       <number>0</number>
      </property>
      <widget class="QWidget" name="General" >
+      <property name="geometry" >
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>438</width>
+        <height>345</height>
+       </rect>
+      </property>
       <attribute name="title" >
        <string>General</string>
       </attribute>
@@ -49,7 +57,7 @@
          <property name="title" >
           <string>Slider mode</string>
          </property>
-         <layout class="QVBoxLayout" >
+         <layout class="QHBoxLayout" name="horizontalLayout" >
           <item>
            <widget class="QRadioButton" name="m_modeBusRadio" >
             <property name="toolTip" >
@@ -91,14 +99,14 @@
          <property name="title" >
           <string>Value display style</string>
          </property>
-         <layout class="QVBoxLayout" >
+         <layout class="QHBoxLayout" name="horizontalLayout_2" >
           <item>
            <widget class="QRadioButton" name="m_valueExactRadio" >
             <property name="toolTip" >
              <string>Show exact DMX values</string>
             </property>
             <property name="text" >
-             <string>Exact</string>
+             <string>DMX / Time</string>
             </property>
             <property name="checked" >
              <bool>true</bool>
@@ -119,6 +127,35 @@
         </widget>
        </item>
        <item>
+        <widget class="QGroupBox" name="m_externalInputGroup" >
+         <property name="title" >
+          <string>External Input</string>
+         </property>
+         <layout class="QGridLayout" name="gridLayout" >
+          <item row="0" column="1" >
+           <widget class="QComboBox" name="m_inputUniverseCombo" />
+          </item>
+          <item row="0" column="0" >
+           <widget class="QLabel" name="m_inputUniverseLabel" >
+            <property name="text" >
+             <string>Input universe</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0" >
+           <widget class="QLabel" name="m_inputChannelLabel" >
+            <property name="text" >
+             <string>Input channel</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1" >
+           <widget class="QComboBox" name="m_inputChannelCombo" />
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
         <spacer>
          <property name="orientation" >
           <enum>Qt::Vertical</enum>
@@ -134,6 +171,14 @@
       </layout>
      </widget>
      <widget class="QWidget" name="Bus" >
+      <property name="geometry" >
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>438</width>
+        <height>345</height>
+       </rect>
+      </property>
       <attribute name="title" >
        <string>Bus</string>
       </attribute>
@@ -227,6 +272,14 @@
       </layout>
      </widget>
      <widget class="QWidget" name="Level" >
+      <property name="geometry" >
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>438</width>
+        <height>345</height>
+       </rect>
+      </property>
       <attribute name="title" >
        <string>Level</string>
       </attribute>
@@ -381,6 +434,14 @@
       </layout>
      </widget>
      <widget class="QWidget" name="Submaster" >
+      <property name="geometry" >
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>438</width>
+        <height>345</height>
+       </rect>
+      </property>
       <attribute name="title" >
        <string>Submaster</string>
       </attribute>
